--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
   <servlet>
-    <servlet-name>GAETestBed</servlet-name>
-    <servlet-class>com.readyposition.gaetestbed.GAETestBedServlet
+    <servlet-name>HelloWorld</servlet-name>
+    <servlet-class>com.readyposition.gaetestbed.HelloWorldServlet
     </servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>GAETestBed</servlet-name>
-    <url-pattern>/gaetestbed</url-pattern>
+    <servlet-name>HelloWorld</servlet-name>
+    <url-pattern>/helloworld</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>LowLevelDatastore</servlet-name>
+    <servlet-class>com.readyposition.gaetestbed.LowLevelDatastoreServlet
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LowLevelDatastore</servlet-name>
+    <url-pattern>/lowleveldatastore</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
