Experimental Login/Logout servlets. AbstractCommandServlet requires logins now.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
   <servlet>
+    <servlet-name>Login</servlet-name>
+    <servlet-class>com.readyposition.gaetestbed.LoginServlet
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>com.readyposition.gaetestbed.LogoutServlet
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>HelloWorld</servlet-name>
     <servlet-class>com.readyposition.gaetestbed.HelloWorldServlet
     </servlet-class>
