--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+  <listener>
+    <listener-class>
+      com.readyposition.gaetestbed.ObjectifyContextListener
+    </listener-class>
+  </listener>
+
+  <filter>
+    <filter-name>ObjectifyFilter</filter-name>
+    <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>ObjectifyFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <servlet>
     <servlet-name>Login</servlet-name>
     <servlet-class>com.readyposition.gaetestbed.LoginServlet
@@ -54,10 +69,22 @@
     <servlet-name>Channel</servlet-name>
     <url-pattern>/channel</url-pattern>
   </servlet-mapping>
-  
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
+
+  <servlet>
+    <servlet-name>ChannelPresence</servlet-name>
+    <servlet-class>com.readyposition.gaetestbed.ChannelPresenceServlet
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ChannelPresence</servlet-name>
+    <url-pattern>/_ah/channel/connected/</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>ChannelPresence</servlet-name>
+    <url-pattern>/_ah/channel/disconnected/</url-pattern>
+  </servlet-mapping>
 
   <servlet>
     <servlet-name>SystemServiceServlet</servlet-name>
@@ -104,6 +131,10 @@
     <servlet-name>Freemarker</servlet-name>
     <url-pattern>*.ftl</url-pattern>
   </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 
   <security-constraint>
     <web-resource-collection>
