Minor tweak to logging.  Deployed to GAE for testing.

--- a/war/WEB-INF/logging.properties
+++ b/war/WEB-INF/logging.properties
@@ -9,6 +9,8 @@
 # </system-properties>
 #
 
-# Set the default logging level for all loggers to WARNING
+# Set logging level for our code to INFO
+com.readyposition.level = INFO
+
+# Set the default logging level for everything else to WARNING
 .level = WARNING
-com.readyposition = INFO
